<resources>
    <string name="app_name">BMI Calculator</string>
    <string name="text_bmi">BMI:</string>
    <string name="text_bmi_default">0.00</string>
    <string name="text_imperial_height">Height in Inches</string>
    <string name="text_imperial_weight">Weight in Pounds</string>
    <string name="text_metric_height">Height in Meters</string>
    <string name="text_metric_weight">Weight in Kilograms</string>
    <string name="text_imperial">Inches/Pounds</string>
    <string name="text_metric">Meters/Kilograms</string>
    <string name="text_info">Based on your BMI, you are</string>
    <string name="title_info">Advice Based on Your BMI</string>
</resources>
